# GAN-MNIST

./: main.py  pyproject.toml
docs/: notes.md
notebooks/: config.py  infer.ipynb  mnist.ipynb
src/: config.py  main.py
